# corksy-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  SYSTEM_DESIGN.md  main.py  pyproject.toml
.playwright-mcp/: page-2026-07-01T06-21-15-770Z.yml  page-2026-07-01T06-21-32-474Z.yml  page-2026-07-01T06-21-56-437Z.yml  page-2026-07-01T06-22-46-646Z.yml
app/: config.py  containers.py  logger.py  main.py
app/agents/: graph.py  state.py
app/agents/nodes/: classify_intent.py  execute_plan.py  fallback.py  generate.py  plan.py  retrieve.py
app/agents/prompts/: classify_intent.py  generate.py  plan.py
app/api/v1/: ask.py  upload.py
app/core/: config.py  containers.py  logger.py
app/db/: qdrant.py
app/schemas/: request.py  response.py
app/services/: embedding.py  generation.py  indexing.py  llm_factory.py  query_tool.py  retrieval.py
app/workflow/: graph.py  state.py
app/workflow/nodes/: fallback.py  generate.py  retrieve.py
docker/: Dockerfile  docker-compose.yml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/app/: App.tsx  index.css  main.tsx
frontend/src/hooks/: use-chat-runtime.tsx  use-session-id.ts
frontend/src/lib/: sse.ts
frontend/src/lib/api/: ask.ts  (+2 more)
frontend/src/stores/: source-store.ts
openspec/changes/document-upload-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/frontend-chat-assistantui/: design.md  proposal.md  tasks.md
openspec/changes/good-folder-structure/: design.md  proposal.md  tasks.md
openspec/changes/retriever-agent/: design.md  proposal.md  tasks.md
(+12 files in other folders)
