[project]
name = "corksy-rag"
version = "0.1.0"
description = "E-commerce RAG pipeline — document upload and Q&A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-groq>=0.2.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "qdrant-client[async]>=1.11.0",
    "dependency-injector>=4.41.0",
    "pydantic-settings>=2.5.0",
    "langgraph>=1.2.6",
    "langchain-openai>=1.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
